force response to wrap (avoid horiz scroll)

--- a/styles.scss
+++ b/styles.scss
@@ -26,7 +26,9 @@ body {
 }
 
 pre {
+  max-width: 100%;
   white-space: pre-wrap;
+  word-break: break-word;
 
   &.error {
     color: red;
